# chunker

./: .env.example  .gitignore  README.md  architecture.md  eval_cluster_map_semantic.py  opencode.json  pyproject.toml  qa_chains_raw.json  run.sh  run_legal_casebook.sh
corpus_index/: corpus_chunks.json  faiss.index  faiss_id_map.json
corpus_text/: doc_0000_200.txt  opencode.json
dasboard/: eval_dashboard.html
data_acquisition/: README.md  assemble_corpus.py  check_overlap.py  download_cap.py  extract_graph.py  generate_augmentation.py  verify_corpus.py
data_acquisition/prompts/: brief_generator.txt  legislative_generator.txt  secondary_source_generator.txt
example_input/: 200.txt
qa_generation/: 1_build_corpus_index.py  2_generate_qa_chains.py  3_contractor_polish.py  4_validate_qa_dataset.py  build_corpus_index.py  contractor_polish.py  generate_multiturn.py  generate_qa_chains.py  launch_qa_gen.py  validate_qa_dataset.py
qa_generation/prompts/: contractor_validator.txt  hop_answerer.txt  multiturn_generator.txt  qa_gen_agent.txt  qa_gen_agent_enron.txt  qa_gen_agent_legal_casebook.txt  qa_proposer.txt  temp_prompt.txt
qa_generation/qa_config/: categories.yaml  categories_enron.yaml  categories_legal_casebook.yaml  qa_agents.yaml
qa_generation/seeding/: base_seeder.py  entity_collision_seeder.py  random_seeder.py
qa_generation/utils/: chunk_store.py  faiss_store.py  llm_client.py  (+1 more)
tests/: conftest.py  test_build_corpus.py  test_categories_and_deliverable.py  test_generation.py  test_multiturn.py  test_retry_and_resume.py  test_validation_report.py
(+1 files in other folders)
